tests/corpus/negative/N18-helper-function/source.py
def calculate(value):
    return helper(value)
